<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SignInActivity"
    tools:showIn="@layout/activity_sign_in">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            app:contentPadding="8dp"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:padding="4dp"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/profile"
                    android:layout_height="wrap_content" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/ch"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/sigup_fullname"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:inputType="text"
                        android:hint="@string/fullname"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/sigup_email"
                        android:focusable="false"
                        android:text="@string/email_example_com"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/email"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/sigup_phone"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/phone"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/sigup_address"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:gravity="start"
                        android:hint="@string/address"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:padding="4dp"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_height="wrap_content"
                    android:text="@string/subscription"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:id="@+id/signup_subscription"
                        android:hint="@string/type"
                        android:text="@string/free"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <!--<android.support.v7.widget.CardView-->
            <!--app:contentPadding="8dp"-->
            <!--android:layout_margin="8dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:orientation="vertical"-->
                <!--android:layout_height="wrap_content">-->


            <!--</LinearLayout>-->

        <!--</android.support.v7.widget.CardView>-->

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>