<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:text="@string/tz"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/receipt_amount"
            android:text="@string/_10000"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:padding="4dp"
            android:id="@+id/receipt_date"
            android:layout_height="wrap_content"
            android:text="@string/clock_time"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>


    </LinearLayout>

</LinearLayout>