<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/nathan"
        android:contentDescription="@string/sigin_up_image"
        android:scaleType="centerCrop"
        android:layout_height="match_parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            app:contentPadding="8dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_action_user"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/term_and_conditions"
                    android:textAlignment="center"
                    android:padding="4dp"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_height="wrap_content" />

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_text"/>

                </android.support.v4.widget.NestedScrollView>

                <com.google.android.gms.common.SignInButton
                    android:layout_width="wrap_content"
                    android:id="@+id/siginup"
                    android:layout_gravity="center"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>